--- a/web/app/themes/thechange/styles/theme.scss
+++ b/web/app/themes/thechange/styles/theme.scss
@@ -1,4 +1,4 @@
 @import "base/typography";
 @import "base/layout";
 @import "base/buttons";
-//@import "base/animations";
+@import "base/animations";
