--- a/web/app/themes/thechange/styles/base/layout.scss
+++ b/web/app/themes/thechange/styles/base/layout.scss
@@ -10,6 +10,7 @@
 section.container{
     display: flex;
     justify-content: center;
+    position: relative;
     width: 100%;
     padding: 180px 0px; 
     @media screen and (max-width: 500px) {
@@ -70,4 +71,40 @@ section.container {
 
 section.container.bg-primary + .bg-primary{
     padding-top: 0px; 
+}
+
+section.container.bg-secondary{
+    background-color: #f8f8f8;
+    padding-top: 240px;
+    & + .bg-secondary{
+        padding-top: 0px; 
+        &:before{
+            display: none; 
+        }
+    }
+    &:before{
+        content: '';
+        position: absolute;
+        top: 0px; 
+        left: 0px; 
+        width: 100%;
+        height: 110px; 
+        background-color: #fff;
+        background-image: url(../img/wave.svg);
+        background-size: 100% 100%;
+    }
+    & + .bg-primary{
+        &:before{
+            content: '';
+            position: absolute;
+            top: -55px; 
+            left: 0px; 
+            width: 100%;
+            height: 110px; 
+            background-color: #fff;
+            background-image: url(../img/wave.svg);
+            background-size: 100% 100%;
+            transform: rotate(180deg);
+        }
+    }
 }
