--- a/web/app/themes/thechange/styles/base/typography.scss
+++ b/web/app/themes/thechange/styles/base/typography.scss
@@ -3,7 +3,7 @@
     font-family: 'Glacial';
     font-style: normal;
     font-weight: 400;
-    src: url('../styles/fonts/glacialindifference-regular.woff2') format('woff2'),
+    src: url('../styles/fonts/glacial.woff2') format('woff2'),
 }
 @font-face {
     font-display: swap;
