Ad fonts and login logo

--- a/web/app/themes/thechange/blocks/text-image-header/text-image-header.scss
+++ b/web/app/themes/thechange/blocks/text-image-header/text-image-header.scss
@@ -44,8 +44,8 @@ section.text-image-header.container {
       top: 0px; 
       width: 45%;
       max-width: 1200px;
-      -webkit-mask-image: url('../img/masker2.png');
-      mask-image: url('../img/masker2.png');
+      -webkit-mask-image: url('../img/blob2.svg');
+      mask-image: url('../img/blob2.svg');
       -webkit-mask-size: cover;
       mask-size: cover;
       -webkit-mask-repeat: no-repeat;
