--- a/web/app/themes/thechange/blocks/text-image/text-image.scss
+++ b/web/app/themes/thechange/blocks/text-image/text-image.scss
@@ -65,27 +65,26 @@ section.text-image.container .text-image-wrapper {
    &.text-bottom{ align-items: flex-end; }
 }
 
-.mask-blob1 {
--webkit-mask-image: url(https://business.virtuagym.com/mask/blob1.svg);
-    mask-image: url(https://business.virtuagym.com/mask/blob1.svg);
-    -webkit-mask-size: contain;
-    mask-size: contain;
-    -webkit-mask-repeat: no-repeat;
-    mask-repeat: no-repeat;
-    -webkit-mask-position: center;
-    mask-position: center;
-}
-
-.object-contain {
-   -o-object-fit: contain;
-   object-fit: contain;
-}
-
-.rounded-theme-lg {
-   border-radius: 80px;
-}
-
-img, video {
-   max-width: 100%;
-   height: auto;
+@media screen and (max-width: 1050px) {
+   section.text-image.container {
+      padding: 80px 0px; 
+      .text-image-wrapper {
+         flex-direction: column-reverse!important;
+         align-items: flex-start!important;
+         .spacer {
+            width: 100%; 
+            height: 50px; 
+         }
+         .text-container,
+         picture.image{
+            width: 100%!important; 
+            padding-bottom: 0px; 
+            margin-right: 0px; 
+            margin-left: 0px; 
+         }
+         picture.image{
+            max-width: 400px; 
+         }
+      }
+   }
 }
