--- a/web/app/themes/thechange/blocks/header-bubble/header-bubble.scss
+++ b/web/app/themes/thechange/blocks/header-bubble/header-bubble.scss
@@ -15,10 +15,20 @@ section.header-bubble.container{
         aspect-ratio: 17/10;
         mix-blend-mode: multiply;
     }
+
+    h1 {
+        margin-top: 0;
+        margin-bottom: 40px;
+        font-weight: 700;
+    }
+
+    p {
+        width: 60%;
+    }
     .text{
         position: absolute; 
-        top: 15.5vw;
-        left: 10vw;
+        top: 20.5vw;
+        left: 8vw;
         max-width: 60%;
         color: #fff; 
         form.search-anywhere{
@@ -119,66 +129,6 @@ section.header-bubble.container{
             }
         }  
     }
-    .article-slider{
-        display: flex; 
-        width: 100%; 
-        a.slide{
-            display: flex; 
-            position: relative;
-            text-decoration: none;
-            color: inherit;  
-            flex-shrink: 0;
-            border-radius: 40px; 
-            width: 420px;
-            .inner-slide{
-                display: flex; 
-                flex-direction: column; 
-                border-radius: 40px; 
-                padding: 30px 40px; 
-                background-color: rgba(0, 138, 187, 0.85);
-                box-shadow: 0px 5px 10px rgba(0, 0, 0, 0);
-                backdrop-filter: blur(6px);
-                transition: background-color 0.8s, box-shadow 0.8s;
-            }
-            h4{
-                color: #fff; 
-                font-size: 36px; 
-                line-height: 1.2; 
-                font-weight: 700; 
-                margin-bottom: 10px; 
-                transition: color 0.8s; 
-                @media screen and (max-width: 600px){ font-size: 29px; } 
-            }
-            p{ padding-right: 26px; }
-            svg{
-                position: absolute; 
-                right: 26px;
-                bottom: 26px;  
-                width: 42px;
-                *{ 
-                    fill: #fff; 
-                    stroke: #fff; 
-                    transition: all 0.8s;
-                } 
-            }
-            &:hover{
-                .inner-slide{
-                    background-color: #fff; 
-                    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
-                    transition: box-shadow 0.2s, background-color 0.2s;
-                }
-                h4{ 
-                    color: #008ABB;
-                    transition: color 0.2s; 
-                } 
-                svg *{ 
-                    fill: #008ABB; 
-                    stroke: #008ABB; 
-                    transition: all 0.2s;
-                }
-            }
-        }
-    }
 }
 
 /* Animation start */
@@ -209,6 +159,7 @@ section.header-bubble.container{
 
 @media screen and (max-width: 1450px){
     section.header-bubble.container{
+        
         .inner-wide{
             width: calc(100% / 14 * 13);
         }
@@ -262,6 +213,11 @@ section.header-bubble.container{
             background: linear-gradient(90deg,#f39e4c 0%, #d0e461 100%);
             mix-blend-mode: multiply;
             z-index: -1; 
+        }
+
+
+        h1, p {
+            width: 100%;
         }
 
         img.bg-pattern{
@@ -400,6 +356,10 @@ section.header-bubble.container{
 
 @media screen and (max-width: 500px){
     section.header-bubble.container {
+
+        h1, p {
+            width: 100%;
+        }
         .inner-wide .cta-image{
             picture{
                 width: 180px; 
