--- a/web/app/themes/thechange/styles/base/typography.scss
+++ b/web/app/themes/thechange/styles/base/typography.scss
@@ -40,7 +40,7 @@ section.container,
     }
 
     h1{
-        font-size: calc(72px + 3vw); 
+        font-size: 58px !important;
         line-height: 1.1;
 
         @media screen and (max-width: 600px){
@@ -49,7 +49,7 @@ section.container,
     }
 
     h2{
-        font-size: calc(48px + 2vw); 
+        font-size: 48px !important;;
         line-height: 1.2;
         @media screen and (max-width: 600px){
             font-size: calc(30px + 1.75vw); 
@@ -57,7 +57,7 @@ section.container,
     }
 
     h3{
-        font-size: 48px;
+        font-size: 38px !important;;
         line-height: 40px;
         @media screen and (max-width: 600px){
             font-size: 32px;   
@@ -65,7 +65,7 @@ section.container,
     }
 
     h4{
-        font-size: 38px; 
+        font-size: 38px !important;;  
         line-height: 1.25;
         font-weight: 400;
         @media screen and (max-width: 600px){
