--- a/web/app/themes/thechange/blocks/header-image/header-image.scss
+++ b/web/app/themes/thechange/blocks/header-image/header-image.scss
@@ -8,6 +8,7 @@
     .header-image-container{
         width: 100%; 
     }
+    margin-top: -130px; 
     picture{
         display: flex;
         position: relative;  
