--- a/web/app/themes/thechange/blocks/header/header.scss
+++ b/web/app/themes/thechange/blocks/header/header.scss
@@ -6,7 +6,7 @@ body.front-end header{
    z-index: 11; 
    width: 100%; 
    color: #241B11;
-   background-color: rgb(255 255 255/.8);  
+   background-color: transparent; 
    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0);
    transition: transform 0.6s ease-in-out 0s, background-color 0s ease 0s, height 0.6s ease 0s, box-shadow 0.6s ease 0s; 
     
@@ -20,10 +20,7 @@ body.front-end header{
       }
       a.cta-1{ margin-left: 20px; }
    }
-
-   &.top{
-      background-color: #fff;
-   }
+   
    &.not-top{
       background-color: #fff; 
       box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
@@ -73,8 +70,9 @@ body.front-end header{
                   padding: 20px 15px;
                   color: inherit; 
                   text-decoration: none;
-                  font-size: 24px; 
-                  transition: all 0.8s;
+                  font-size: calc( 10px + 0.75vw);
+                  font-weight: 700;
+                  transition: all 0.4s;
                   &:after{
                      content: '';
                      position: absolute;
@@ -162,6 +160,16 @@ body.front-end header{
     }
     .mobile-menu-trigger{
         display: none; 
+    }
+
+    &.top.white{
+      ul li 
+         a{ 
+            color: #fff!important; 
+         }
+         .sub-menu a{
+            color: #000!important; 
+         }
     }
 }
 
@@ -273,7 +281,7 @@ header.loading nav.desktop-menu ul li.menu-item-has-children ul.sub-menu{
     &--close {
        .hamburger-menu {
           span {
-             background-color: #000;
+             background-color: #000!important;
           }
  
           span:nth-of-type(1) {
@@ -289,6 +297,12 @@ header.loading nav.desktop-menu ul li.menu-item-has-children ul.sub-menu{
           }
        }
     }
+ }
+
+ &.top.white{
+     .hamburger-menu span{
+         background-color: #fff;
+     }
  }
  
  .mobile-menu-bg {
