Fancy styling for header image

--- a/web/app/themes/thechange/styles/base/typography.scss
+++ b/web/app/themes/thechange/styles/base/typography.scss
@@ -90,6 +90,15 @@ section.container,
         padding-left: 20px; 
     }
 
+    h1{
+        & + h2, 
+        & + h3,
+        & + h4,
+        & + h5{
+            margin-top: 10px;
+        }
+    }
+
     
     /* How to handle spacing in text */
     p.space{
