--- a/web/app/themes/thechange/blocks/header-image/header-image.scss
+++ b/web/app/themes/thechange/blocks/header-image/header-image.scss
@@ -13,6 +13,7 @@
         display: flex;
         position: relative;  
         width: 100%; 
+        min-height: 100vh;
         aspect-ratio: 1920/1080;
         background-color: #fff; 
         @media screen and (max-width: 500px){
@@ -35,26 +36,29 @@
         position: absolute;
         z-index: 3;
         display: flex;
-        justify-content: center;
-        align-items: center; 
+        justify-content: flex-start;
+        align-items: flex-start; 
         top: 0;
         left: 0;
-        width: 50%;
+        width: 100%;
         height: 100%;
         padding-top: 0px; 
         overflow: hidden; 
+        background: linear-gradient(40deg, rgba(0,0,0,0.5) 0%, rgba(0,0,0,0) 50%);
   
         .header-image-text-container {
            display: flex;
            flex-direction: column; 
-           align-items: center;
-           justify-content: center; 
+           justify-content: flex-end; 
            position: relative;
            height: 100%;
-           width: 100%; 
+           max-height: 100vh;
+           width: 50%; 
            opacity: 1;
-           padding: 60px 0px; 
-           p{ font-size: 20px; }
+           color: #fff;
+           padding-left: calc(100% / 14 * 1); 
+           padding-bottom: 5vw; 
+           text-shadow: 0px 0px 12px rgba(0, 0, 0, 0.33);
         }
     }
 }
