--- a/web/app/themes/thechange/blocks/header/header.scss
+++ b/web/app/themes/thechange/blocks/header/header.scss
@@ -166,6 +166,7 @@ body.front-end header{
       ul li 
          a{ 
             color: #fff!important; 
+            text-shadow: 0px 0px 15px rgba(0, 0, 0, 0.75);
          }
          .sub-menu a{
             color: #000!important; 
