--- a/web/app/themes/thechange/blocks/text-image-header/text-image-header.scss
+++ b/web/app/themes/thechange/blocks/text-image-header/text-image-header.scss
@@ -14,6 +14,7 @@ section.text-image-header.container {
 
    .inner {
       display: flex;
+      padding-top: 100px;
       height: 100%;
       z-index: 1;
       @media screen and (max-width: 1500px) {
