--- a/web/app/themes/thechange/blocks/text-image/text-image.scss
+++ b/web/app/themes/thechange/blocks/text-image/text-image.scss
@@ -6,18 +6,12 @@ section.text-image.container {
       picture.image {
          display: flex;
          align-items: flex-start;
-         -webkit-mask-image: url('../img/blob2.svg');
-         mask-image: url('../img/blob2.svg');
-         -webkit-mask-size: contain;
-         mask-size: contain;
-         -webkit-mask-repeat: no-repeat;
-         mask-repeat: no-repeat;
-         -webkit-mask-position: center;
-         mask-position: center;
+
 
          img {
             width: 100%;
             height: auto;
+            border-radius: 50%;
          }
       }
 
@@ -27,10 +21,6 @@ section.text-image.container {
 
       &.text-right{
          flex-direction: row-reverse;
-         picture.image{
-            -webkit-mask-image: url('../img/blob1.svg');
-            mask-image: url('../img/blob1.svg');
-         }
       }
 
    }
