--- a/web/app/themes/thechange/blocks/footer/footer.scss
+++ b/web/app/themes/thechange/blocks/footer/footer.scss
@@ -51,9 +51,13 @@
         }
     }
 
+    svg {
+        width: 100%;
+    }
+
     .inner-wide.bottom{
         display: grid;
-        grid-template-columns: 465fr 365fr 245fr 245fr;
+        grid-template-columns: 345fr 245fr 245fr 245fr;
         grid-gap: 40px;
         padding-bottom: 120px;
         margin: auto auto;
