--- a/web/app/themes/thechange/blocks/text-blocks-3/text-blocks-3.scss
+++ b/web/app/themes/thechange/blocks/text-blocks-3/text-blocks-3.scss
@@ -2,6 +2,7 @@ section.text-blocks-3{
     position: relative; 
     .inner{
         min-width: 900px; 
+        width: calc(100% / 14 * 12);
     }
     .text-block-wrapper{
         display: grid;  
